added publications for new time series post

--- a/_biblio/blog-biblio.bib
+++ b/_biblio/blog-biblio.bib
@@ -52,4 +52,37 @@
 	pages = {929--945}
 }
 
+@book{lattice-book,
+    title = {Lattice: Multivariate Data Visualization with R},
+    author = {Deepayan Sarkar},
+    publisher = {Springer},
+    address = {New York},
+    year = {2008},
+    note = {ISBN 978-0-387-75968-5},
+    url = {http://lmdvr.r-forge.r-project.org},
+}
 
+@book{ggplot2-book,
+    author = {Hadley Wickham},
+    title = {ggplot2: elegant graphics for data analysis},
+    publisher = {Springer New York},
+    year = {2009},
+    isbn = {978-0-387-98140-6},
+    url = {http://had.co.nz/ggplot2/book},
+}
+
+@article{monteith-ecol-ind-trends,
+  title={Trends in the hydrochemistry of acid-sensitive surface waters in the UK 1988--2008},
+  author={Monteith, DT and Evans, CD and Henrys, PA and Simpson, GL and Malcolm, IA},
+  journal={Ecological Indicators},
+  year={in press},
+  publisher={Elsevier}
+}
+
+@article{curtis-ecol-ind-trends,
+  title={Trends in bulk deposition of acidity in the UK, 1988--2007, assessed using additive models},
+  author={Curtis, Chris J and Simpson, Gavin L},
+  journal={Ecological Indicators},
+  year={in press},
+  publisher={Elsevier}
+}
