assets for new post on principal curves

--- a/_biblio/blog-biblio.bib
+++ b/_biblio/blog-biblio.bib
@@ -86,3 +86,105 @@
   year={in press},
   publisher={Elsevier}
 }
+
+@article{hastie_principal_1989,
+        title = {Principal Curves},
+        volume = {84},
+        copyright = {Copyright © 1989 American Statistical Association},
+        issn = {0162-1459},
+        url = {http://www.jstor.org/stable/2289936},
+        doi = {10.2307/2289936},
+        abstract = {Principal curves are smooth one-dimensional curves that pass through the middle of a p-dimensional data set, providing a nonlinear summary of the data. They are nonparametric, and their shape is suggested by the data. The algorithm for constructing principal curves starts with some prior summary, such as the usual principal-component line. The curve in each successive iteration is a smooth or local average of the p-dimensional points, where the definition of local is based on the distance in arc length of the projections of the points onto the curve found in the previous iteration. In this article principal curves are defined, an algorithm for their construction is given, some theoretical results are presented, and the procedure is compared to other generalizations of principal components. Two applications illustrate the use of principal curves. The first describes how the principal-curve procedure was used to align the magnets of the Stanford linear collider. The collider uses about 950 magnets in a roughly circular arrangement to bend electron and positron beams and bring them to collision. After construction, it was found that some of the magnets had ended up significantly out of place. As a result, the beams had to be bent too sharply and could not be focused. The engineers realized that the magnets did not have to be moved to their originally planned locations, but rather to a sufficiently smooth arc through the middle of the existing positions. This arc was found using the principal-curve procedure. In the second application, two different assays for gold content in several samples of computer-chip waste appear to show some systematic differences that are blurred by measurement error. The classical approach using linear errors in variables regression can detect systematic linear differences but is not able to account for nonlinearities. When the first linear principal component is replaced with a principal component is replaced with a principal curve, a local "bump" is revealed, and bootstrapping is used to verify its presence.},
+        number = {406},
+        urldate = {2013-05-31},
+        journal = {Journal of the American Statistical Association},
+        author = {Hastie, Trevor and Stuetzle, Werner},
+        month = jun,
+        year = {1989},
+        note = {{ArticleType:} research-article / Full publication date: Jun., 1989 / Copyright © 1989 American Statistical Association},
+        pages = {502--516},
+        file = {hastie_stuetzle-1989-principal_curves.pdf:/home/gavin/work/publications/reprints//H/hastie_stuetzle-1989-principal_curves.pdf:application/pdf}
+}
+
+
+@article{death_principal_1999,
+        title = {Principal Curves: a new technique for indirect and direct gradient analysis},
+        volume = {80},
+        shorttitle = {Principal Curves},
+        url = {http://www.esajournals.org/doi/abs/10.1890/0012-9658(1999)080%5B2237:PCANTF%5D2.0.CO%3B2},
+        number = {7},
+        urldate = {2013-05-31},
+        journal = {Ecology},
+        author = {De'ath, Glenn},
+        year = {1999},
+        pages = {2237–2253},
+        file = {death_ecology_1999_principal_curves.pdf:/home/gavin/work/publications/new_zotero/storage/CJMGK6HT/death_ecology_1999_principal_curves.pdf:application/pdf}
+}
+
+
+@book{legendre_numerical_2012,
+        edition = {3},
+        title = {Numerical Ecology},
+        isbn = {0444538682},
+        publisher = {Elsevier},
+        author = {Legendre, Pierre and Legendre, Louis},
+        month = aug,
+        year = {2012}
+}
+
+@article{swan_examination_1970,
+        title = {An Examination of Some Ordination Problems By Use of Simulated Vegetational Data},
+        volume = {51},
+        copyright = {Copyright © 1970 Ecological Society of America},
+        issn = {0012-9658},
+        url = {http://www.jstor.org/stable/1933602},
+        doi = {10.2307/1933602},
+        abstract = {Hypothetical vegetation models were made to simulate numerical changes in species populations along a single environmental gradient. A single ordination procedure was evaluated by its ability to detect the ecological information in the hypothetical models. The procedure was reasonably successful when the data were drawn from a short length of the gradient but became progressively less so as longer lengths of the environmental gradient were included in the data. This parallels an increase in the number of stands from which each species is absent in the total data set. Zero values appear to mask ecological information, and an intuitive method of assigning @'degree of absence@' values to the data is described. After this adjustment, ordination patterns were easier to interpret because ecological information was concentrated in fewer axes.},
+        number = {1},
+        urldate = {2013-06-03},
+        journal = {Ecology},
+        author = {Swan, J. M. A.},
+        month = jan,
+        year = {1970},
+        note = {{ArticleType:} research-article / Full publication date: Jan., 1970 / Copyright © 1970 Ecological Society of America},
+        keywords = {ecology, horseshoe, {PCA}, principal components analysis, statistics},
+        pages = {89--102},
+        file = {swan-1970-an_examination_of_some_ordination_problems_by_use_of_simulated_vegetational_data.pdf:/home/gavin/work/publications/reprints//S/swan-1970-an_examination_of_some_ordination_problems_by_use_of_simulated_vegetational_data.pdf:application/pdf}
+},
+
+@article{noy-meir_principal_1970,
+        title = {Principal Component Ordination and Simulated Vegetational Data},
+        volume = {51},
+        copyright = {Copyright © 1970 Ecological Society of America},
+        issn = {0012-9658},
+        url = {http://www.jstor.org/stable/1935398},
+        doi = {10.2307/1935398},
+        abstract = {Curvilinear ordinations similar to those of Swan (1970) are obtained by using principal component analysis on the same single-gradient models of vegetation. Any non-linear relationships between species will produce such a result.},
+        number = {3},
+        urldate = {2013-06-03},
+        journal = {Ecology},
+        author = {Noy-Meir, I. and Austin, M. P.},
+        month = may,
+        year = {1970},
+        note = {{ArticleType:} research-article / Full publication date: May, 1970 / Copyright © 1970 Ecological Society of America},
+        keywords = {ecology, horseshoe, {PCA}, principal components analysis, statistics},
+        pages = {551--552},
+        file = {noy-meir_austin-1970-principal_component_ordination_and_simulated_vegetational_data.pdf:/home/gavin/work/publications/reprints//N/noy-meir_austin-1970-principal_component_ordination_and_simulated_vegetational_data.pdf:application/pdf}
+}
+
+@article{goodall_objective_1954,
+        title = {Objective methods for the classification of vegetation.  {III.} An essay in the use of  factor analysis},
+        volume = {2},
+        url = {http://www.publish.csiro.au/paper/BT9540304},
+        abstract = {The possibilities of using the statistiral technique of factor analysis in describing variations in plant communities are explored. This method enables the variations to be treated as continuous, instead of resulting in a separation of the stands studied into a limited number of discrete associations or other synecological categories. It further provides a means for testing whether such separation can be objectively justified. It may often facilitate the recognition of the complexes of environmental factors which mainly determine differences in vegetation, and provides a means of estimating the relative value of the various species as indicators of these environmental complexes.
+
+In the present paper, the "principal axes" technique of factor analysis is applied to the analysis of data for percentage cover for 14 species in the Victorian Mallee. It is shown that their distribution, in so far as it does not depend on factors peculiar to individual species, can be represented in terms of at most five orthogonal "factors". The two most important "factors" are interpreted in terms of catenary changes in the vegetation. Other less common species not included in the analysis show high correlations with these "factors". In units of 1.28 ha there is no evidence that more than one continuously varying population is represented in the area; but in units of 25 sq.m. the majority of quadrat records fall into one or other of two principal categories, representing the valley and ridge communities. The potential value of factor analysis in plant sociology, and difficulties in its application to this field, are discussed.},
+        number = {3},
+        urldate = {2013-06-03},
+        journal = {Australian Journal of Botany},
+        author = {Goodall, {DW}},
+        month = jan,
+        year = {1954},
+        keywords = {ecology, horseshoe, {PCA}, principal components analysis},
+        pages = {304--324}
+}
