add prcurve part 1 post and some extra assets needed

--- a/_biblio/blog-biblio.bib
+++ b/_biblio/blog-biblio.bib
@@ -188,3 +188,20 @@ In the present paper, the "principal axes" technique of factor analysis is appli
         keywords = {ecology, horseshoe, {PCA}, principal components analysis},
         pages = {304--324}
 }
+
+@article{birks_studies_1978,
+        title = {Studies in the vegetational history of Scotland. V. Late Devensian and early Flandrian pollen and macrofossil stratigraphy at Abernethy Forest, Inverness-shire},
+        volume = {80},
+        issn = {1469-8137},
+        url = {http://onlinelibrary.wiley.com/doi/10.1111/j.1469-8137.1978.tb01579.x/abstract},
+        doi = {10.1111/j.1469-8137.1978.tb01579.x},
+        abstract = {This paper describes palaeoecological studies at Abernethy Forest by means of pollen and macrofossil analysis and radiocarbon dating. It also illustrates the value of stratigraphic macrofossil analysis in conjunction with pollen analysis in increasing the range and detail of palaeoecological reconstructions of past vegetation and {environment.A} new, large diameter core from Abernethy Forest was radiocarbon dated, and the presence of Late Devensian sediments was confirmed. Clear vegetational changes were recorded. A pioneer grass-sedge vegetation colonized the bare moraine. It developed into a shrub tundra, dominated by Empetrum and Be tula nana as a result of the climatic warming during Allerød time. The Younger Dryas climatic deterioration led to the formation of species-rich open vegetation, in which Artemisia was very {abundant.At} the opening of the Flandrian, at about 9700 {B.P.}, Juniperus and Betula nana scrub developed, which was later colonized by tree Betula and then Corylus. From about 7225 {B.P.} Pinus dominated the {forest.Throughout}, the specific determinations and local derivation of macrofossils enhanced the reconstruction of the upland vegetation. In addition, macrofossils provided the majority of the evidence for the progression of the hydrosere through lake to bog {communities.The} complementary nature of pollen and macrofossil analyses from the same core is emphasized by a direct comparison of seed and pollen influxes.},
+        language = {en},
+        number = {2},
+        urldate = {2013-06-03},
+        journal = {New Phytologist},
+        author = {Birks, Hilary H. and Mathewes, Rolf W.},
+        year = {1978},
+        pages = {455–484},
+        file = {birks_mathewes-1978-studies_in_the_vegetational_history_of_scotland.pdf:/home/gavin/work/publications/reprints//B/birks_mathewes-1978-studies_in_the_vegetational_history_of_scotland.pdf:application/pdf;Snapshot:/home/gavin/work/publications/new_zotero/storage/XQ669B8M/abstract.html:text/html}
+}
