--- a/_posts/2013-12-28-pcurve-1.md
+++ b/_posts/2013-12-28-pcurve-1.md
@@ -24,7 +24,7 @@ ll <- data.frame(Species1 = c(1,2,4,7,8,7,4,2,1,rep(0,10)),
                  Species2 = c(rep(0, 5),1,2,4,7,8,7,4,2,1, rep(0, 5)),
                  Species3 = c(rep(0, 10),1,2,4,7,8,7,4,2,1))
 rownames(ll) <- paste0("site", seq_len(NROW(ll)))
-matplot(ll, type = "o", col = "black", pch = 21:23, bg = "white",
+matplot(ll, type = "o", col = 1:3, pch = 21:23, bg = 1:3,
         ylab = "Abundance", xlab = "Sites")
 {% endhighlight %}
 
