push recent changes to website

--- a/_biblio/blog-biblio.bib
+++ b/_biblio/blog-biblio.bib
@@ -205,3 +205,17 @@ In the present paper, the "principal axes" technique of factor analysis is appli
         pages = {455–484},
         file = {birks_mathewes-1978-studies_in_the_vegetational_history_of_scotland.pdf:/home/gavin/work/publications/reprints//B/birks_mathewes-1978-studies_in_the_vegetational_history_of_scotland.pdf:application/pdf;Snapshot:/home/gavin/work/publications/new_zotero/storage/XQ669B8M/abstract.html:text/html}
 }
+
+@article{podani-miklos-2002,
+	title = {Resemblance Coefficients and the Horseshoe Effect in Principal Coordinates Analysis},
+	author = {Podani, J. and Miklós, I.},
+	journal = {Ecology},
+	volume = {83},
+	number = {12},
+	pages = {3331--3343},
+	url = {http://www.jstor.org/stable/3072083},
+	abstract = {Although principal coordinates analysis is one of the most widely used ordination methods in ecology, no study had been undertaken as yet on the combined effect of gradient type and resemblance coefficient on the results. We examine the performance of principal coordinates analysis with different choices of the resemblance function and different types of a single underlying gradient. Whereas unimodal species response to long gradients always leads to horseshoe (or arch)-shaped configurations in the first two dimensions, the converse is not true; curvilinear arrangements cannot generally be explained by the Gaussian model. Several resemblance coefficients widely used in ecology produce paradoxical arches from perfectly linear data. Species richness changes alone may also lead to a horseshoe for even more distance functions, with the noted exception of Manhattan metric. The appearance of arches is a mathematical necessity in these cases; true artifacts are introduced only if distances are treated inappropriately before eigenanalysis. Examples illustrate that similar configurations (curves and even circles) may arise from very different data structures; therefore the shape of the point scatter is insufficient by itself to identify background ecological phenomena. The horseshoe effect may be diminished and eigenvalue extraction may be made more efficient if input measures are raised to high powers; but this operation is recommended only in combination with standard analyses, as part of a comparative approach. We derive a new distance function, implying standardization by species totals, from the chi-square distance. We found that this function improves gradient recovery when there is unimodal species response and some species have their optima outside the range of study.},
+	language = {English},
+	year = {2002},
+	publisher = {Ecological Society of America},
+}
