minor tweak to initial paragraph as jekyll doesn't seem to parse liquid in page.excerpt

--- a/_posts/2014-05-09-modelling-seasonal-data-with-gam.Rmd
+++ b/_posts/2014-05-09-modelling-seasonal-data-with-gam.Rmd
@@ -21,7 +21,7 @@ opts_chunk$set(results = "hold", fig.path = "modelling-seasonal-data-with-gam-",
                fig.show = "hold", dev = "png", dpi = 85, tidy = FALSE, fig.height = 7, fig.width = 7,
                dev.args = list(pointsize = 10))
 ```
-In previous posts ([here]({% post_url 2011-06-12-additive-modelling-and-the-hadcrut3v-global-mean-temperature-series %}) and [here]({% post_url 2011-07-21-smoothing-temporally-correlated-data %})) I have looked at how generalized additive models (GAMs) can be used to model non-linear trends in time series data. At the time a number of readers commented that they were interested in modelling data that had more than just a trend component; how do you model data collected throughout the year over many years with a GAM? In this post I will show one way that I have found particularly useful in my research.
+In previous posts ([here](/2011/06/12/additive-modelling-and-the-hadcrut3v-global-mean-temperature-series/) and [here](/2011/07/21/smoothing-temporally-correlated-data/ )) I have looked at how generalized additive models (GAMs) can be used to model non-linear trends in time series data. At the time a number of readers commented that they were interested in modelling data that had more than just a trend component; how do you model data collected throughout the year over many years with a GAM? In this post I will show one way that I have found particularly useful in my research.
 
 First an equation. If we think about a time series where observations were made on a number of occasions within any given year over a number of years, we may want to model the following features of the data
 
@@ -321,8 +321,8 @@ p3 <- predict(m3$gam, newdata = pdat, type = "terms", se.fit = TRUE)
 pdat <- transform(pdat,
                   p  = p$fit[,2],  se  = p$se.fit[,2],
                   p1 = p1$fit[,2], se1 = p1$se.fit[,2],
-                  p2 = p2$fit[,2], se1 = p2$se.fit[,2],
-                  p3 = p3$fit[,2], se1 = p3$se.fit[,2])
+                  p2 = p2$fit[,2], se2 = p2$se.fit[,2],
+                  p3 = p3$fit[,2], se3 = p3$se.fit[,2])
 ```
 
 Note that it doesn't matter what months get select in the 200 values as the month effect is handle by the other spline term; here we get the contribution for the trend which is based on the `Time` variable only. This would need to done be differently if you allowed the seasonal and trend splines to *interact*; I'll look at this is a future post at some point.
