changes made up to and including Jul 28th 2014

--- a/_biblio/blog-biblio.bib
+++ b/_biblio/blog-biblio.bib
@@ -219,3 +219,35 @@ In the present paper, the "principal axes" technique of factor analysis is appli
 	year = {2002},
 	publisher = {Ecological Society of America},
 }
+
+
+@ARTICLE{Jamil2013,
+  title       = "Generalized linear mixed models can detect unimodal
+                 species-environment relationships",
+  author      = "Jamil, Tahira and Ter Braak, Cajo J F",
+  affiliation = "Biometris, Wageningen University and Research Centre ,
+                 Wageningen , The Netherlands ; Department of Mathematics,
+                 COMSATS Institute of Information Technology , Islamabad ,
+                 Pakistan.",
+  abstract    = "Niche theory predicts that species occurrence and abundance
+                 show non-linear, unimodal relationships with respect to
+                 environmental gradients. Unimodal models, such as the Gaussian
+                 (logistic) model, are however more difficult to fit to data
+                 than linear ones, particularly in a multi-species context in
+                 ordination, with trait modulated response and when species
+                 phylogeny and species traits must be taken into account.
+                 Adding squared terms to a linear model is a possibility but
+                 gives uninterpretable parameters. This paper explains why and
+                 when generalized linear mixed models, even without squared
+                 terms, can effectively analyse unimodal data and also presents
+                 a graphical tool and statistical test to test for unimodal
+                 response while fitting just the generalized linear mixed
+                 model. The R-code for this is supplied in Supplemental
+                 Information 1.",
+  journal     = "PeerJ",
+  volume      =  1,
+  pages       = "e95",
+  month       =  "9~" # jul,
+  year        =  2013
+}
+
