add post on randomised complete block designs and vegan

--- a/_biblio/blog-biblio.bib
+++ b/_biblio/blog-biblio.bib
@@ -291,3 +291,31 @@ In the present paper, the "principal axes" technique of factor analysis is appli
   year      =  1987
 }
 
+
+@ARTICLE{Spackova1998-ad,
+  title     = "Sensitivity of seedling recruitment to moss, litter and dominant
+               removal in an oligotrophic wet meadow",
+  author    = "\v{S}pa\v{c}kov\'{a}, Iva and Kotorov\'{a}, Ivana and Lep\v{s},
+               Jan",
+  journal   = "Folia geobotanica",
+  publisher = "Springer Netherlands",
+  volume    =  33,
+  number    =  1,
+  pages     = "17--30",
+  month     =  "1~" # mar,
+  year      =  1998,
+  issn      = "1211-9520",
+  issn_alt  = "1874-9348",
+  doi       = "10.1007/BF02914928"
+}
+
+
+@BOOK{Smilauer2014-ac,
+  title     = "Multivariate Analysis of Ecological Data using {CANOCO} 5",
+  author    = "\v{S}milauer, Petr and Lep\v{s}, Jan",
+  publisher = "Cambridge University Press",
+  edition   = "2 edition",
+  month     =  "17~" # apr,
+  year      =  2014
+}
+
