update post on rarefaction curves

--- a/_posts/2015-04-16-drawing-rarefaction-curves-with-custom-colours.Rmd
+++ b/_posts/2015-04-16-drawing-rarefaction-curves-with-custom-colours.Rmd
@@ -33,6 +33,7 @@ opts_chunk$set(fig.lp = "fig:")
 
 I was sent an email this week by a **vegan** user who wanted to draw rarefaction curves using `rarecurve()` but with different colours for each curve. The solution to this one is quite easy as `rarecurve()` has argument `col` so the user could supply the appropriate vector of colours to use when plotting. However, they wanted to distinguish all 26 of their samples, which is certainly stretching the limits of perception if we only used colour. Instead we can vary other parameters of the plotted curves to help with identifying individual samples.
 
+To illustrate, I'll use the Barro Colorado Island data set `BIC` that comes with **vegan**. I just take the first 26 samples as this was the data set size my correspondent indicated they had available.
 
 ```{r subset-data}
 library("vegan")
@@ -41,6 +42,8 @@ BCI2 <- BCI[1:26, ]
 raremax <- min(rowSums(BCI2))
 raremax
 ```
+
+`raremax` is the minimum sample count achieved over the 26 samples. We will rarefy the sample counts to this value. 
 
 To set up the parameters we might use for plotting, `expand.grid()` is a useful helper function
 
@@ -59,7 +62,7 @@ out <- with(pars[1:26, ],
                       lty = lty, label = FALSE))
 ```
 
-Note that I saved the output from `rarecurve()` in object `out`. This object contains everything we need to draw our own version of the plot if we wish. For example, we could use fewer colours and alter the line thickness instead to make up the required number of combinations.
+Note that I saved the output from `rarecurve()` in object `out`. This object contains everything we need to draw our own version of the plot if we wish. For example, we could use fewer colours and alter the line thickness[^1] instead to make up the required number of combinations.
 
 ```{r expand-pars-2}
 col <- c("black", "darkred", "forestgreen", "hotpink", "blue")
@@ -70,7 +73,9 @@ pars <- expand.grid(col = col, lty = lty, lwd = lwd,
 head(pars)
 ```
 
-Then we can get almost the same plot using the following code
+[^1]: We can't use the approach outlined in this example to vary `lwd` because of the way `rarecurve()` draws the individual curves, in a loop. We have no way to tell `rarecurve()` to use the *i*th element of a vector of `lwd` values.
+
+Using the information in `out` returned by `rarecurve()` we can get almost the same plot using the following code to draw the elements by hand
 
 ```{r plot-custom-rarecurves, fig = TRUE, fig.cap = "Second attempt at rarefaction curves with custom colours and plotting."}
 Nmax <- sapply(out, function(x) max(attr(x, "Subsample")))
