--- a/_biblio/blog-biblio.bib
+++ b/_biblio/blog-biblio.bib
@@ -625,3 +625,59 @@ In the present paper, the "principal axes" technique of factor analysis is appli
   doi      = "10.1111/2041-210X.12359"
 }
 
+
+@ARTICLE{Cahill2015-tt,
+  title     = "Change points of global temperature",
+  author    = "Cahill, Niamh and Rahmstorf, Stefan and Parnell, Andrew C",
+  journal   = "Environmental research letters: ERL [Web site]",
+  publisher = "IOP Publishing",
+  volume    =  10,
+  number    =  8,
+  pages     = "084002",
+  month     =  "3~" # aug,
+  year      =  2015,
+  issn      = "1748-9326",
+  doi       = "10.1088/1748-9326/10/8/084002"
+}
+
+% The entry below contains non-ASCII chars that could not be converted
+% to a LaTeX equivalent.
+@ARTICLE{Morice2012-wk,
+  title    = "Quantifying uncertainties in global and regional temperature
+              change using an ensemble of observational estimates: The
+              {HadCRUT4} data set",
+  author   = "Morice, Colin P and Kennedy, John J and Rayner, Nick A and Jones,
+              Phil D",
+  abstract = "Recent developments in observational near-surface air temperature
+              and sea-surface temperature analyses are combined to produce
+              HadCRUT4, a new data set of global and regional temperature
+              evolution from 1850 to the present. This includes the addition of
+              newly digitized measurement data, both over land and sea, new
+              sea-surface temperature bias adjustments and a more comprehensive
+              error model for describing uncertainties in sea-surface
+              temperature measurements. An ensemble approach has been adopted
+              to better describe complex temporal and spatial interdependencies
+              of measurement and bias uncertainties and to allow these
+              correlated uncertainties to be taken into account in studies that
+              are based upon HadCRUT4. Climate diagnostics computed from the
+              gridded data set broadly agree with those of other global
+              near-surface temperature analyses. Fitted linear trends in
+              temperature anomalies are approximately 0.07°C/decade from 1901
+              to 2010 and 0.17°C/decade from 1979 to 2010 globally.
+              Northern/southern hemispheric trends are 0.08/0.07°C/decade over
+              1901 to 2010 and 0.24/0.10°C/decade over 1979 to 2010. Linear
+              trends in other prominent near-surface temperature analyses agree
+              well with the range of trends computed from the HadCRUT4 ensemble
+              members.",
+  journal  = "J. Geophys. Res.",
+  volume   =  117,
+  number   = "D8",
+  pages    = "D08101",
+  month    =  "27~" # apr,
+  year     =  2012,
+  keywords = "climate; historical temperature; near surface temperature;
+              observational ensemble; 1616 Climate variability; 1637 Regional
+              climate change; 3305 Climate change and variability; 3309
+              Climatology"
+}
+
