new post on soap film smoothing

--- a/_biblio/blog-biblio.bib
+++ b/_biblio/blog-biblio.bib
@@ -681,3 +681,54 @@ In the present paper, the "principal axes" technique of factor analysis is appli
               Climatology"
 }
 
+
+@ARTICLE{Wood2008-gy,
+  title     = "Soap film smoothing",
+  author    = "Wood, Simon N and Bravington, Mark V and Hedley, Sharon L",
+  journal   = "Journal of the Royal Statistical Society. Series B, Statistical
+               methodology",
+  publisher = "Blackwell Publishing Ltd",
+  volume    =  70,
+  number    =  5,
+  pages     = "931--955",
+  month     =  "1~" # nov,
+  year      =  2008,
+  keywords  = "Basis penalty smooth; Differential equation smoothing;
+               FELSPLINE; Finite window smoothing; Known boundary smoothing;
+               Spline",
+  issn      = "1369-7412, 1467-9868",
+  doi       = "10.1111/j.1467-9868.2008.00665.x"
+}
+
+@ARTICLE{Ramsay2002-mv,
+  title     = "Spline smoothing over difficult regions",
+  author    = "Ramsay, Tim",
+  journal   = "Journal of the Royal Statistical Society. Series B, Statistical
+               methodology",
+  publisher = "Blackwell Science, Ltd",
+  volume    =  64,
+  number    =  2,
+  pages     = "307--319",
+  month     =  "1~" # may,
+  year      =  2002,
+  keywords  = "Bivariate spline; Finite element; Penalized regression;
+               Smoothing; Spatial smoothing; Thin plate spline",
+  issn      = "1369-7412, 1467-9868",
+  doi       = "10.1111/1467-9868.00339"
+}
+
+@ARTICLE{Miller2014-kb,
+  title     = "Finite area smoothing with generalized distance splines",
+  author    = "Miller, David L and Wood, Simon N",
+  journal   = "Environmental and ecological statistics",
+  publisher = "Springer US",
+  volume    =  21,
+  number    =  4,
+  pages     = "715--731",
+  month     =  "1~" # dec,
+  year      =  2014,
+  issn      = "1352-8505, 1573-3009",
+  doi       = "10.1007/s10651-014-0277-4"
+}
+
+
