whole host of updates I forgot to check in

--- a/_biblio/blog-biblio.bib
+++ b/_biblio/blog-biblio.bib
@@ -732,3 +732,51 @@ In the present paper, the "principal axes" technique of factor analysis is appli
 }
 
 
+@INCOLLECTION{Simpson2012-zi,
+  title     = "Human Impacts: Applications of Numerical Methods to Evaluate
+               {Surface-Water} Acidification and Eutrophication",
+  booktitle = "Tracking Environmental Change Using Lake Sediments",
+  author    = "Simpson, Gavin L and Hall, Roland I",
+  publisher = "Springer Netherlands",
+  pages     = "579--614",
+  series    = "Developments in Paleoenvironmental Research",
+  year      =  2012,
+  isbn      = "9789400727441, 9789400727458",
+  doi       = "10.1007/978-94-007-2745-8\_19"
+}
+
+@ARTICLE{Hobbs2016-mr,
+  title    = "Nitrogen deposition to lakes in national parks of the western
+              Great Lakes region: Isotopic signatures, watershed retention, and
+              algal shifts",
+  author   = "Hobbs, William O and Lafrancois, Brenda Moraska and Stottlemyer,
+              Robert and Toczydlowski, David and Engstrom, Daniel R and Edlund,
+              Mark B and Almendinger, James E and Strock, Kristin E and
+              VanderMeulen, David and Elias, Joan E and Saros, Jasmine E",
+  journal  = "Global biogeochemical cycles",
+  pages    = "2015GB005228",
+  month    =  "1~" # jan,
+  year     =  2016,
+  keywords = "nitrogen deposition; lake sediment; western Great Lakes region;
+              National Park; nitrogen stable isotopes; diatom; 0414
+              Biogeochemical cycles, processes, and modeling; 0469 Nitrogen
+              cycling; 0454 Isotopic composition and chemistry; 1051
+              Sedimentary geochemistry",
+  issn     = "0886-6236, 1944-9224",
+  doi      = "10.1002/2015GB005228"
+}
+
+@ARTICLE{Ter_Braak2004-tb,
+  title   = "{Co-Correspondence} Analysis: a New Ordination Method to Relate
+             Two Community Compositions",
+  author  = "ter Braak, Cajo J F and Schaffers, Andr\'{e} P",
+  journal = "Ecology",
+  volume  =  85,
+  number  =  3,
+  pages   = "834--846",
+  year    =  2004,
+  eprint  = "http://dx.doi.org/10.1890/03-0021",
+  issn    = "0012-9658",
+  doi     = "10.1890/03-0021"
+}
+
