--- a/_posts/2015-01-14-harvesting-canadian-climate-data.Rmd
+++ b/_posts/2015-01-14-harvesting-canadian-climate-data.Rmd
@@ -12,6 +12,7 @@ tags:
 - opendata
 active: blog
 category: R
+alert: "As of May 11, 2016, Government Canada has updated the data download URLs such that the URLs created by <code>genURLS()</code> are no longer valid. A <a href=\"http://www.fromthebottomoftheheap.net/2016/05/24/harvesting-more-canadian-climate-data/\">new post</a> explains what's changed and how the functions were updated as a result. The <a href=\"https://gist.github.com/gavinsimpson/8c13e3c5f905fd67cf85\">gist</a> contains updated functions that work with the URL and data download API."
 ---
 
 ```{r, echo = FALSE, include = FALSE, cache = FALSE}
